Get create suggested route to work after refactor
